9574
This is a variation on the classic puzzler:

{code}
scala> object O { val 1 = 2 }; O
scala.MatchError: 2 (of class java.lang.Integer)
{code}

The LHS of a val is a pattern.

Because no values are bound in the pattern, the override modifier is redundant.

{code}
scala> object O { override val (a, 1) = (2, 2) }; O
<console>:35: error: value a overrides nothing
              object O { override val (a, 1) = (2, 2) };;
                                      ^
{code}
